--- a/src/main/resources/changelog.properties
+++ b/src/main/resources/changelog.properties
@@ -2,14 +2,16 @@ added.title=### Added
 changed.title=### Changed
 deprecated.title= ### Deprecated
 fixed.title=### Fixed
-ignored.title=### Ignored \n\
+ignored.title=Ignored changes: \n\
 \ \ (these changes should not be included in the changelog)
 line.item=- {{{subject}}}
+none.standard.changelog=Nothing noteworthy found in this release
 no.change=No changes found
 release.title(version,type,recommend,date)=## [v{{version}}] ({{type}} release{{#recommend}}, Update recommended{{/recommend}}) \n\
 *Released on {{date}}*
 removed.title=### Removed
 security.title=### Security
-unclassified.title=### Unclassified \n\
-\ \ ( define a rule ) \n\
-\ \ ( manually classify )
+unclassified.title=Unclassified changes: \n\
+\ \ ( you can define a rule, hard coded for now ) \n\
+\ \ ( or manually classify ) \n\
+\ \ ( or ignore )
