Fix script location when using fat jar

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
                             <include>tinylog-dev.properties</include>
                         </includes>
                     </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                    </resource>
                 </resources>
                 <plugins>
                     <plugin>
